force-app/main/default/objects/AH_Schedule_Renewal__c/AH_Schedule_Renewal__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>AH Schedule Renewal Settings</label>
</CustomObject>