force-app/main/default/objects/AH_Schedule_Renewal__c/fields/Corp_Product_Group__c.field-meta.xml
<CustomField>
    <fullName>Corp_Product_Group__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Corp Product Group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>