force-app/main/default/objects/AH_Schedule_Renewal__c/fields/Customer_Account__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Customer Account</label>
    <length>255</length>
    <type>Text</type>
</CustomField>