force-app/main/default/objects/AH_Schedule_Renewal__c/fields/Excluded_Pricebooks__c.field-meta.xml
<CustomField>
    <fullName>Excluded_Pricebooks__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Excluded Pricebooks</label>
    <length>247</length>
    <type>Text</type>
</CustomField>