force-app/main/default/objects/AH_Schedule_Renewal__c/fields/Product_SKU__c.field-meta.xml
<CustomField>
    <fullName>Product_SKU__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Product/SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>