force-app/main/default/objects/AH_Schedule_Renewal__c/fields/Revenue_Category__c.field-meta.xml
<CustomField>
    <fullName>Revenue_Category__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Revenue Category</label>
    <length>255</length>
    <type>Text</type>
</CustomField>